--- a/platformio.ini
+++ b/platformio.ini
@@ -7,7 +7,7 @@ monitor_speed     = 115200                 ; Serial Monitor speed
 upload_speed      = 921600                 ; Quick flashing via UART
 build_type        = release                ; debug / release
 upload_protocol = espota
-upload_port = 192.168.227.153
+upload_port = 192.168.xxx.xxx
 ;upload_port = COM3
 
 lib_deps =
